# WaveManipp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  THIRD_PARTY_NOTICES.md  docs-extra.css  premake5.lua
api/: Dsp.hpp  Fft.hpp  RecordingBuffer.hpp  Wave.hpp  WaveBuilder.hpp  WaveManipp.h  WaveMixer.hpp  WaveProperties.hpp  utils.hpp
docs/: Wave.md  WaveBuilder.md
hdr/: WaveBuilder.h  WaveFile.h
src/: Dsp.cpp  Fft.cpp  PhaseVocoder.cpp  RecordingBuffer.cpp  Wave.cpp  Wave.hpp  WaveBuilder.cpp  WaveBuilder.hpp  WaveFile.cpp  WaveManip.hpp  WaveManipp.h  WaveMixer.cpp  WaveMixer.hpp  WaveProperties.cpp  WaveProperties.hpp  utils.hpp
